<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    tools:context=".activities.WelcomeActivity">

    <RelativeLayout
        android:id="@+id/maskIconLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/smiling_attendant_icon"
            android:contentDescription="@string/slider_placeholder"
            />

        <ImageView
            android:id="@+id/maskIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/sparkles_icon"
            android:contentDescription="@string/sparkles"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/sliderHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/welcome"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maskIconLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sliderBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:fontFamily="@font/gotham_light"
        android:text="@string/well_you_have_thus_come_this_far_nspeak_friend_and_enter_or_some_nlorem_ipsum"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderHeader"
        app:layout_constraintVertical_bias="0.0"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hoorayButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_purple_cornered_bg"
        android:fontFamily="@font/gotham_medium"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:stateListAnimator="@null"
        android:text="@string/hooray"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sliderBody" />

</androidx.constraintlayout.widget.ConstraintLayout>