<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@color/colorActivityBackground"
    tools:context=".activities.IdentifyActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/maskIconLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/image"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/identify_icon"
                android:contentDescription="@string/slider_placeholder"
                />

            <ImageView
                android:id="@+id/maskIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/sparkles_icon"
                android:contentDescription="@string/sparkles"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/sliderHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/identify"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maskIconLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/sliderBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/gotham_light"
            android:text="@string/we_need_to_verify_your_identity_n_required"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderHeader"
            app:layout_constraintVertical_bias="0.0"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/nationalCardView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/sliderBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp">

                <RelativeLayout
                    android:id="@+id/greenOneBackground"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:background="@drawable/green_circle_bg">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_1"
                        android:fontFamily="@font/gotham_bold"
                        android:textColor="@color/colorWhite"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingStart="@dimen/_9sdp"
                        android:paddingEnd="@dimen/_9sdp"
                        android:textSize="@dimen/_10sdp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/recommendedLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/red_solid_cornered_bg"
                    tools:ignore="RelativeOverlap">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recommended"
                        android:textSize="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/gotham_light"

                        />
                </RelativeLayout>

                <TextView
                    android:id="@+id/nationalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/national"
                    android:fontFamily="@font/gotham_bold"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignTop="@+id/greenOneBackground"
                    android:layout_toEndOf="@+id/greenOneBackground"
                    />

                <TextView
                    android:id="@+id/nationalBodyText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/id_or_driver_s_license_for_citizens_nof_the_country_mainly"
                    android:textSize="@dimen/_12ssp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/gotham_light"
                    android:layout_below="@+id/nationalText"
                    android:layout_alignStart="@+id/nationalText"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/passportCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nationalCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <RelativeLayout
                    android:id="@+id/greenTwoBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_circle_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_bold"
                        android:paddingStart="@dimen/_9sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_9sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/_2"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/passportText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/greenTwoBackground"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/greenTwoBackground"
                    android:fontFamily="@font/gotham_bold"
                    android:text="@string/passport"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/passportBodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passportText"
                    android:layout_alignStart="@+id/passportText"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/gotham_light"
                    android:text="@string/required_passport_for_non_citizens"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>