<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@color/colorActivityBackground"
    tools:context=".activities.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/maskIconLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/image"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/verification_icon"
                android:contentDescription="@string/slider_placeholder"
                />

            <ImageView
                android:id="@+id/maskIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/sparkles_icon"
                android:contentDescription="@string/sparkles"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/sliderHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/verification"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maskIconLayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/sliderBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/gotham_light"
            android:text="@string/enter_a_4_digit_number_that_n_was_sent_to"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderHeader"
            app:layout_constraintVertical_bias="0.0"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/enterNumberCardView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/sliderBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical">

                <com.poovam.pinedittextfield.LinePinField
                    android:id="@+id/otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    app:highlightType="currentField"
                    android:fontFamily="@font/gotham_book"
                    android:layout_centerHorizontal="true"
                    android:textSelectHandle="@drawable/text_handle"
                    app:noOfFields="4"
                    app:distanceInBetween="@dimen/_10sdp"
                    app:fieldColor="@color/colorDarkGray"
                    app:highlightColor="@color/colorPrimary"
                    app:lineThickness="@dimen/_1sdp"
                    app:isCursorEnabled="true"
                    app:bottomTextPaddingDp="@dimen/_15sdp"
                    />

                <ImageView
                    android:id="@+id/verificationIcon"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/verified_icon"
                    android:layout_alignBottom="@+id/otp"
                    android:layout_alignTop="@id/otp"
                    android:contentDescription="@string/verification"
                    android:layout_alignParentEnd="true"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/verifyButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@+id/otp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:background="@drawable/dark_purple_cornered_bg"
                    android:fontFamily="@font/gotham_medium"
                    android:stateListAnimator="@null"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp"
                    />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/otpTimeoutTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_send_code_in_0_59"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/gotham_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterNumberCardView" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>